cambiando color barra izquierda scrool

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #607d8b;
+  background-color: #2962ff;
   /* color of the scroll thumb */
   border-radius: 20px;
   /* roundness of the scroll thumb */
